--- a/viewer/index.html
+++ b/viewer/index.html
@@ -447,12 +447,13 @@
 
 
     <!-- JavaScript 파일 연결 -->
-    
+    <script src="./js/windowopen.js"></script>
     <script src="./js/pop_up.js"></script>
     <script src="./js/dropdown.js"></script>
     <script src="./js/confetti.js"></script>
     
     <script>
+      // 채팅영역 자동롤링
       function startChatRolling() {
           const chatMessages = document.getElementById("chatMessages");
           const messageHeight = document.querySelector(".chat_list").offsetHeight;
