--- a/viewer/index.html
+++ b/viewer/index.html
@@ -447,7 +447,7 @@
 
 
     <!-- JavaScript 파일 연결 -->
-    <script src="./js/windowopen.js"></script>
+    <!-- <script src="./js/windowopen.js"></script> -->
     <script src="./js/pop_up.js"></script>
     <script src="./js/dropdown.js"></script>
     <script src="./js/confetti.js"></script>
