--- a/viewer/index.html
+++ b/viewer/index.html
@@ -20,7 +20,7 @@
 
           <div class="view-btn-wrap">
             <div class="logo_text">
-              <span>ClickMate</span>
+              <span>BeongGae</span>
             </div>
             <div class="btn-small c_red">
               <span>LIVE</span>
